--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="bound-one" class="scroll-bound" >
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F1.mp4?v=1635372092361"
+          src="1.mp4"
           type="video/mp4"
         />
       </video>
