--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="bound-two" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F2.mp4?v=1635372093316"
+          src="2.mp4"
           type="video/mp4"
         />
       </video>
@@ -25,7 +25,7 @@
     <div id="bound-tree" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F3.mp4?v=1635372092610"
+          src="3.mp4"
           type="video/mp4"
         />
       </video>
@@ -33,7 +33,7 @@
     <div id="bound-four" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F4.mp4?v=1635372092850"
+          src="4.mp4"
           type="video/mp4"
         />
       </video>
@@ -41,7 +41,7 @@
     <div id="bound-five" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F5.mp4?v=1635372093476"
+          src="5.mp4"
           type="video/mp4"
         />
       </video>
@@ -49,7 +49,7 @@
     <div id="bound-six" class="bound-six">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F6.mp4?v=1635372092078"
+          src="6.mp4"
           type="video/mp4"
         />
       </video>
@@ -57,7 +57,7 @@
     <div id="bound-seven" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F7.mp4?v=1635372094072"
+          src="7.mp4"
           type="video/mp4"
         />
       </video>
@@ -65,7 +65,7 @@
     <div id="bound-eight" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F8.mp4?v=1635372093296"
+          src="8.mp4"
           type="video/mp4"
         />
       </video>
@@ -73,7 +73,7 @@
     <div id="bound-nine" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F9.mp4?v=1635372095031"
+          src="9.mp4"
           type="video/mp4"
         />
       </video>
@@ -81,7 +81,7 @@
     <div id="bound-ten" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F10.mp4?v=1635372092239"
+          src="10.mp4"
           type="video/mp4"
         />
       </video>
@@ -89,7 +89,7 @@
     <div id="bound-tenone" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2FMiss%2C%2010%2C5.mp4?v=1635372093133"
+          src="Miss, 10,5.mp4"
           type="video/mp4"
         />
       </video>
@@ -97,7 +97,7 @@
     <div id="bound-eleven" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F11.mp4?v=1635372093156"
+          src="11.mp4"
           type="video/mp4"
         />
       </video>
@@ -105,7 +105,7 @@
       <div id="bound-twelve" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F12.mp4?v=1635372094715"
+          src="12.mp4"
           type="video/mp4"
         />
       </video>
@@ -113,7 +113,7 @@
       <div id="bound-thirteen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F13.mp4?v=1635372093811"
+          src="13.mp4"
           type="video/mp4"
         />
       </video>
@@ -121,7 +121,7 @@
       <div id="bound-fourteen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F14.mp4?v=1635372093866"
+          src="14.mp4"
           type="video/mp4"
         />
       </video>
@@ -129,7 +129,7 @@
      <div id="bound-fiveteen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F15.mp4?v=1635372094056"
+          src="15.mp4"
           type="video/mp4"
         />
       </video>
@@ -137,7 +137,7 @@
      <div id="bound-sixteen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F16.mp4?v=1635372094016"
+          src="16.mp4"
           type="video/mp4"
         />
       </video>
@@ -145,7 +145,7 @@
      <div id="bound-seventeen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F17.mp4?v=1635372093048"
+          src="17.mp4"
           type="video/mp4"
         />
       </video>
@@ -153,7 +153,7 @@
      <div id="bound-eighteen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F18.mp4?v=1635372093177"
+          src="18.mp4"
           type="video/mp4"
         />
       </video>
@@ -161,7 +161,7 @@
     <div id="bound-nineteen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F19.mp4?v=163537209368"
+          src="19.mp4"
           type="video/mp4"
         />
       </video>
@@ -169,7 +169,7 @@
      <div id="bound-twenty" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F20.mp4?v=1635372094191"
+          src="20.mp4"
           type="video/mp4"
         />
       </video>
@@ -177,7 +177,7 @@
         <div id="bound-twentyone" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F21.mp4?v=1635372093996"
+          src="21.mp4"
           type="video/mp4"
         />
       </video>
@@ -188,7 +188,7 @@
      <div id="bound-twentytwo" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F22.mp4?v=1635372092659"
+          src="22.mp4"
           type="video/mp4"
         />
       </video>
