--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="bound-tree" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F3.mp4?v=1635372092610"
+          src="Assets/3.mp4"
           type="video/mp4"
         />
       </video>
@@ -33,7 +33,7 @@
     <div id="bound-four" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F4.mp4?v=1635372092850"
+          src="Assets/4.mp4"
           type="video/mp4"
         />
       </video>
@@ -44,7 +44,7 @@
      <div id="bound-six" class="bound-six">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F6.mp4?v=1635372092078"
+          src="Assets/6.mp4"
           type="video/mp4"
         />
       </video>
@@ -52,7 +52,7 @@
     <div id="bound-seven" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F7.mp4?v=1635372094072"
+          src="Assets/7.mp4"
           type="video/mp4"
         />
       </video>
@@ -63,7 +63,7 @@
     <div id="bound-nine" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F9.mp4?v=1635372095031"
+          src="Assets/9.mp4"
           type="video/mp4"
         />
       </video>
@@ -74,7 +74,7 @@
     <div id="bound-tenone" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2FMiss%2C%2010%2C5.mp4?v=1635372093133"
+          src="Assets/10,5.mp4"
           type="video/mp4"
         />
       </video>
@@ -85,7 +85,7 @@
       <div id="bound-twelve" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F12.mp4?v=1635372094715"
+          src="Assets/12.mp4"
           type="video/mp4"
         />
       </video>
@@ -94,7 +94,7 @@
       <div id="bound-fourteen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F14.mp4?v=1635372093866"
+          src="Assets/14.mp4"
           type="video/mp4"
         />
       </video>
@@ -103,7 +103,7 @@
      <div id="bound-sixteen" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2FLos%20Videos.mp4?v=1635419745024"
+          src="Assets/16.mp4"
           type="video/mp4"
         />
       </video>
@@ -114,7 +114,7 @@
      <div id="bound-twenty" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F20.mp4?v=1635372094191"
+          src="Assets/20.mp4"
           type="video/mp4"
         />
       </video>
