--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </video>
     </div>
     
-    <img class="contentpic" src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F5.png?v=1635419040332" >
+    <img class="contentpic" src="Assets/5.png" >
       
      <div id="bound-six" class="bound-six">
       <video class="content" muted preload playsinline autoplay>
