--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="bound-two" class="scroll-bound">
       <video class="content" muted preload playsinline autoplay>
         <source
-          src="Assets/2.mp4"
+          src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F2.mp4?v=1635372093316"
           type="video/mp4"
         />
       </video>
