--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         />
       </video>
     </div>
-     <img class="contentpic" src="Assets/17.png" >
+     <img class="contentpic" src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F17.png?v=1635424558388" >
      <img class="contentpic" src="Assets/18.png" >
     <img class="contentpic" src="Assets/19.png" >
      <div id="bound-twenty" class="scroll-bound">
