--- a/index.html
+++ b/index.html
@@ -109,14 +109,7 @@
      <img class="contentpic" src="https://cdn.glitch.me/259ebfbc-6750-4cf8-895f-7cb0cf23a2ee%2F17.png?v=1635424558388" >
      <img class="contentpic" src="Assets/18.png" >
     <img class="contentpic" src="Assets/19.png" >
-     <div id="bound-twenty" class="scroll-bound">
-      <video class="content" muted preload playsinline autoplay>
-        <source
-          src="Assets/20.mp4"
-          type="video/mp4"
-        />
-      </video>
-    </div>
+<img class="contentpic" src="Assets/20.png" >
        <img class="contentpic" src="Assets/21.png" >
      <img class="contentpic" src="Assets/22.png" >
 <img class="contentpic" src="Assets/23.png" >
